--- a/nbs/01_example.ipynb
+++ b/nbs/01_example.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -26,18 +26,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initializing waterquality package (version=1.1.0)\n",
-      "Waterdetect version: 1.5.11\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# First, make sure waterquality is correctly installed\n",
     "# %pip install waterquality\n",
@@ -62,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -102,6 +93,8 @@
     }
    ],
    "source": [
+    "from waterquality import DWWaterQuality\n",
+    "\n",
     "wq = DWWaterQuality(\n",
     "    input_folder='d:/images/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741.SAFE',\n",
     "    output_folder='d:/images/output',\n",
@@ -144,7 +137,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -167,26 +160,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def test(Red=1):\n",
-    "    a = 610.94\n",
-    "    c = 0.2324\n",
-    "    spm = 610.94 * Red / (1 - (Red/c))\n",
-    "    return spm"
+    "def tsm(Red=1):\n",
+    "    a = 493.65\n",
+    "    b = 1.16\n",
+    "    c = 0.188\n",
+    "    tsm = a * Red / (1 - (Red/c)) + b\n",
+    "    return tsm"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
     "functions = {\n",
     "    'SPM_Nechad': {\n",
-    "        'function': test,\n",
+    "        'function': tsm,\n",
     "        'units': 'mg/l'\n",
     "    }\n",
     "    # Here you can add another quality function\n",
@@ -195,14 +189,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Starting WaterDetection version: 1.5.11\n",
+      "Starting WaterDetection version: 1.5.12\n",
       "Opening image in folder d:\\images\\22KEV\\S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741.SAFE\n",
       "Retrieving bands for product S2_S2COR\n",
       "35 were found:\n",
@@ -236,8 +230,8 @@
      "output_type": "stream",
      "text": [
       "Selection of best number of clusters using Calinski-Harabasz Index:\n",
-      "k=2 :Calinski_harabaz index=17316.949080628812\n",
-      "k=3 :Calinski_harabaz index=20741.887789735043\n",
+      "k=2 :Calinski_harabaz index=15889.861937183401\n",
+      "k=3 :Calinski_harabaz index=8687.280916527505\n",
       "Applying clusters based naive bayes classifier\n",
       "Assgnin 1 to cluster_id 0\n",
       "Skipping cluster_id 0\n",
@@ -254,7 +248,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "RuntimeWarning: divide by zero encountered in true_divide [230555922.py:4]\n"
+      "RuntimeWarning: divide by zero encountered in true_divide [2985707281.py:5]\n"
      ]
     },
     {
@@ -263,7 +257,9 @@
      "text": [
       "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad.tif\n",
       "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad_rgb.tif\n",
-      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad_rgb.pdf\n"
+      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad_rgb.pdf\n",
+      "**** ERROR DURING CLUSTERING ****\n",
+      "[Errno 13] Permission denied: 'd:\\\\images\\\\output\\\\22KEV\\\\S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741\\\\ImageReport_AC_NB_CM_mndwindwiMir2.pdf'\n"
      ]
     }
    ],
@@ -275,31 +271,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "'D:\\\\Programs\\\\miniconda3\\\\envs\\\\waterquality\\\\Library\\\\share\\\\proj'"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "AttributeError",
+     "evalue": "'NoneType' object has no attribute 'water_mask'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_56988/3080147796.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_param\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'SPM_Nechad'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'jet'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32md:\\onedrive - agência nacional de águas\\projects\\waterquality\\waterquality\\WaterQuality.py\u001b[0m in \u001b[0;36mplot_param\u001b[1;34m(self, param_name, figsize, **kwargs)\u001b[0m\n\u001b[0;32m    176\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m         \u001b[0mparameter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquality_parameters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mparam_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 178\u001b[1;33m         \u001b[0mparameter\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdw_image\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwater_mask\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    179\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'water_mask'"
+     ]
     }
    ],
    "source": [
-    "os.environ['PROJ_LIB']"
+    "wq.plot_param('SPM_Nechad', cmap='jet', vmin=5, vmax=20)"
    ]
   },
   {
@@ -340,28 +329,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'SPM': array([[-9999.      , -9999.      , -9999.      , ...,  -115.205925,\n",
-       "          -115.205925,  -115.205925],\n",
-       "        [-9999.      , -9999.      , -9999.      , ...,  -115.205925,\n",
-       "          -115.205925,  -115.205925],\n",
-       "        [-9999.      , -9999.      , -9999.      , ...,  -115.205925,\n",
-       "          -115.205925,  -115.205925],\n",
+       "{'SPM_Nechad': array([[-9999., -9999., -9999., ..., -9999., -9999., -9999.],\n",
+       "        [-9999., -9999., -9999., ..., -9999., -9999., -9999.],\n",
+       "        [-9999., -9999., -9999., ..., -9999., -9999., -9999.],\n",
        "        ...,\n",
-       "        [ -115.205925,  -115.205925,  -115.205925, ...,  -115.205925,\n",
-       "          -115.205925,  -115.205925],\n",
-       "        [ -115.205925,  -115.205925,  -115.205925, ...,  -115.205925,\n",
-       "          -115.205925,  -115.205925],\n",
-       "        [ -115.205925,  -115.205925,  -115.205925, ...,  -115.205925,\n",
-       "          -115.205925,  -115.205925]], dtype=float32)}"
+       "        [-9999., -9999., -9999., ..., -9999., -9999., -9999.],\n",
+       "        [-9999., -9999., -9999., ..., -9999., -9999., -9999.],\n",
+       "        [-9999., -9999., -9999., ..., -9999., -9999., -9999.]],\n",
+       "       dtype=float32)}"
       ]
      },
-     "execution_count": 95,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
