--- a/nbs/01_example.ipynb
+++ b/nbs/01_example.ipynb
@@ -30,8 +30,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# First, make sure waterquality is correctly installed\n",
-    "# %pip install waterquality\n",
+    "# First, make sure waterquality and waterdetect are correctly installed\n",
+    "# %pip install waterdetect\n",
+    "# pip install git+https://github.com/cordmaur/WaterQuality.git@main\n",
     "\n",
     "from waterquality import DWWaterQuality"
    ]
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,13 +76,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Initializing waterquality package (version=1.1.2)\n",
+      "Waterdetect version: 1.5.12\n",
+      "Trying to locate the proj.db inside GDAL.\n",
       "Loading configuration file ..\\tests\\aux_data\\WaterQuality.ini\n",
       "File ..\\tests\\aux_data\\WaterQuality.ini verified.\n",
       "Loading configuration file ..\\tests\\aux_data\\WaterDetect.ini\n",
@@ -137,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -160,7 +164,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -174,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -189,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -224,71 +228,12 @@
      "text": [
       "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selection of best number of clusters using Calinski-Harabasz Index:\n",
-      "k=2 :Calinski_harabaz index=15889.861937183401\n",
-      "k=3 :Calinski_harabaz index=8687.280916527505\n",
-      "Applying clusters based naive bayes classifier\n",
-      "Assgnin 1 to cluster_id 0\n",
-      "Skipping cluster_id 0\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask.tif\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_clusters.tif\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask_rgb.tif\n",
-      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask_rgb.pdf\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_overlay_rgb.tif\n",
-      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_overlay_rgb.pdf\n",
-      "Calculating SPM_Nechad parameter.\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "RuntimeWarning: divide by zero encountered in true_divide [2985707281.py:5]\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad.tif\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad_rgb.tif\n",
-      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad_rgb.pdf\n",
-      "**** ERROR DURING CLUSTERING ****\n",
-      "[Errno 13] Permission denied: 'd:\\\\images\\\\output\\\\22KEV\\\\S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741\\\\ImageReport_AC_NB_CM_mndwindwiMir2.pdf'\n"
-     ]
     }
    ],
    "source": [
     "wq.run_water_quality(\n",
     "    inversion_functions=functions\n",
     ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 16,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "AttributeError",
-     "evalue": "'NoneType' object has no attribute 'water_mask'",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
-      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_56988/3080147796.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mwq\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mplot_param\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'SPM_Nechad'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mcmap\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;34m'jet'\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmin\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mvmax\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;36m20\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32md:\\onedrive - agência nacional de águas\\projects\\waterquality\\waterquality\\WaterQuality.py\u001b[0m in \u001b[0;36mplot_param\u001b[1;34m(self, param_name, figsize, **kwargs)\u001b[0m\n\u001b[0;32m    176\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    177\u001b[0m         \u001b[0mparameter\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mquality_parameters\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mparam_name\u001b[0m\u001b[1;33m]\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcopy\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m--> 178\u001b[1;33m         \u001b[0mparameter\u001b[0m\u001b[1;33m[\u001b[0m\u001b[0mself\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mdw_image\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwater_mask\u001b[0m \u001b[1;33m!=\u001b[0m \u001b[1;36m1\u001b[0m\u001b[1;33m]\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnan\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m    179\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m    180\u001b[0m         \u001b[0mplt\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mfigure\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mfigsize\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mAttributeError\u001b[0m: 'NoneType' object has no attribute 'water_mask'"
-     ]
-    }
-   ],
-   "source": [
-    "wq.plot_param('SPM_Nechad', cmap='jet', vmin=5, vmax=20)"
    ]
   },
   {
@@ -310,7 +255,7 @@
     }
    ],
    "source": [
-    "wq.plot_param('SPM', cmap='jet', vmin=5, vmax=20)"
+    "wq.plot_param('SPM_Nechad', cmap='jet', vmin=5, vmax=20)"
    ]
   },
   {
@@ -324,7 +269,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "If you want to acess the values directly from "
+    "If you want to acess the values directly from the notebook:"
    ]
   },
   {
@@ -353,102 +298,6 @@
    "source": [
     "wq.quality_parameters"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 17,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Starting WaterDetection version: 1.5.11\n",
-      "Opening image in folder d:\\images\\22KEV\\S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741.SAFE\n",
-      "Retrieving bands for product S2_S2COR\n",
-      "35 were found:\n",
-      "Loading band: Blue\n",
-      "Loading band: Green\n",
-      "Loading band: Red\n",
-      "Loading band: Mir\n",
-      "Loading band: Mir2\n",
-      "Loading band: RedEdg1\n",
-      "Loading band: RedEdg2\n",
-      "Loading band: RedEdg3\n",
-      "Loading band: Nir\n",
-      "Loading band: Nir2\n",
-      "Invalid pixels (0.0001303785886416148) < maximum (0.95).\n",
-      "Saving final MASK\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741_invalid_mask.tif\n",
-      "Calculating clusters for the following combination of bands:\n",
-      "['mndwi', 'ndwi', 'Mir2']\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Selection of best number of clusters using Calinski-Harabasz Index:\n",
-      "k=2 :Calinski_harabaz index=15693.007868108603\n",
-      "k=3 :Calinski_harabaz index=17404.486265153966\n",
-      "k=4 :Calinski_harabaz index=13277.37980286949\n",
-      "k=5 :Calinski_harabaz index=9997.125673883853\n",
-      "k=6 :Calinski_harabaz index=8003.261007020761\n",
-      "Applying clusters based naive bayes classifier\n",
-      "Assgnin 1 to cluster_id 1\n",
-      "Skipping cluster_id 1\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask.tif\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_clusters.tif\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask_rgb.tif\n",
-      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask_rgb.pdf\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_overlay_rgb.tif\n",
-      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_overlay_rgb.pdf\n",
-      "Calculating spm-get parameter.\n",
-      "D:\\OneDrive - Agência Nacional de Águas\\Projects\\WaterQuality\\waterquality\\auxdata\\nechad_2016_S2.txt\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/spm-get.tif\n",
-      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/spm-get_rgb.tif\n",
-      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/spm-get_rgb.pdf\n"
-     ]
-    }
-   ],
-   "source": [
-    "wq.run_water_quality()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
