Updated to work with waterdetect 1.5.13

--- a/nbs/01_example.ipynb
+++ b/nbs/01_example.ipynb
@@ -228,6 +228,41 @@
      "text": [
       "Clipping input data to the valid range for imshow with RGB data ([0..1] for floats or [0..255] for integers).\n"
      ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selection of best number of clusters using Calinski-Harabasz Index:\n",
+      "k=2 :Calinski_harabaz index=16833.524977553854\n",
+      "k=3 :Calinski_harabaz index=8425.920660045012\n",
+      "Applying clusters based naive bayes classifier\n",
+      "Assgnin 1 to cluster_id 0\n",
+      "Skipping cluster_id 0\n",
+      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask.tif\n",
+      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_clusters.tif\n",
+      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask_rgb.tif\n",
+      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_water_mask_rgb.pdf\n",
+      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_overlay_rgb.tif\n",
+      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/AC_NB_CM_mndwindwiMir2/AC_NB_CM_mndwindwiMir2_overlay_rgb.pdf\n",
+      "Calculating SPM_Nechad parameter.\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "RuntimeWarning: divide by zero encountered in true_divide [2985707281.py:5]\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad.tif\n",
+      "Saving image: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad_rgb.tif\n",
+      "Creating pdf file: d:/images/output/22KEV/S2A_MSIL2A_20210706T133231_N0301_R081_T22KEV_20210706T172741/SPM_Nechad_rgb.pdf\n"
+     ]
     }
    ],
    "source": [
